--- a/RentalCars/RentalCars/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/RentalCars/RentalCars/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using RentalCars.Areas.Identity
-@using RentalCars.Areas.Identity.Pages
+@using RentalCars
+@using RentalCars.Models.Cars
+@using RentalCars.Data
+@namespace RentalCars.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
