--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -33,16 +33,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
 				<li class="nav-item">
 					<a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
 				</li>
-				<li class="nav-item d-none d-sm-inline-block">
-					<a href="/" class="nav-link">Home</a>
-					 <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Add">Add Car</a>
+				<li class="nav-item">
+					<a href="/" class="nav-link">Home</a>					
 				</li>
-				<li class="nav-item d-none d-sm-inline-block">
-@*					/<a href="../Controllers/HomeController.cs" class="nav-link">Contact</a>
-*@					 <a asp-area="controller" asp-action="contact" asp-controller="home" class="nav-link">Contact</a>
-
+				<li class="nav-item">
+				    <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Add">Add Car<i class="nav-link"></i></a>
 				</li>
-				
+				<li class="nav-item">
+				    <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="All">Our Cars<i class="nav-link"></i></a>
+				</li>
 			</ul>
 
 			<!-- Right navbar links -->
@@ -89,7 +88,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 			<!-- Brand Logo -->
 			<a href="/" class="brand-link">
 				<img src="~/img/warehouse.png" alt="Warehouse Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-				<span class="brand-text font-weight-light">The Warehouse</span>
+				<span class="brand-text font-weight-light">Rental Cars</span>
 			</a>
 			<!-- Sidebar -->
 			<div class="sidebar">
@@ -122,8 +121,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 				<div class="container-fluid">
 					<div class="row mb-2">
 						<div class="col-sm-6">
-							<h1 class="m-0">Starter Page</h1>
-						</div><!-- /.col -->
+							</div><!-- /.col -->
 						<div class="col-sm-6">
 							<ol class="breadcrumb float-sm-right">
 								<li class="breadcrumb-item"><a href="#">Home</a></li>
