cleaning the project a little bit

--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -91,9 +91,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 				<span class="brand-text font-weight-light">Rental Cars</span>
 			</a>
 			<!-- Sidebar -->
-			<div class="sidebar">
+			@*<div class="sidebar">*@
 				<!-- Sidebar user panel (optional) -->
-				@*<partial name="_LoginPartial" />	*@
+			
 
 				<!-- SidebarSearch Form -->
 				<div class="form-inline">
