--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -37,17 +37,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
 					<a href="/" class="nav-link">Home</a>					
 				</li>
 				<li class="nav-item">
-				    <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Add">Add Car<i class="nav-link"></i></a>
+				    <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="Add">Add Car<i class="nav-link"></i></a>
 				</li>
 				<li class="nav-item">
-				    <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="All">Our Cars<i class="nav-link"></i></a>
+				    <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="All">Our Cars<i class="nav-link"></i></a>
 				</li>
 			</ul>
 
 			<!-- Right navbar links -->
 			<ul class="navbar-nav ml-auto">
 				<!-- Navbar Search -->
-				<li class="nav-item">
+				@*<li class="nav-item">
 					<a class="nav-link" data-widget="navbar-search" href="#" role="button">
 						<i class="fas fa-search"></i>
 					</a>
@@ -67,7 +67,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 							</div>
 						</form>
 					</div>
-				</li>
+				</li>*@
 
 
 				<!-- Notifications Dropdown Menu -->
@@ -91,22 +91,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
 				<span class="brand-text font-weight-light">Rental Cars</span>
 			</a>
 			<!-- Sidebar -->
+			<div class="sidebar">
 			@*<div class="sidebar">*@
+					@*<partial name="_LoginPartial" />*@
+
 				<!-- Sidebar user panel (optional) -->
 			
 
 				<!-- SidebarSearch Form -->
-				<div class="form-inline">
-					<div class="input-group" data-widget="sidebar-search">
-						<input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-						<div class="input-group-append">
-							<button class="btn btn-sidebar">
-								<i class="fas fa-search fa-fw"></i>
-							</button>
-						</div>
-					</div>
-				</div>
-
+				
 				<!-- Sidebar Menu -->
 				<partial name="_MainMenu"/> 
 				<!-- /.sidebar-menu -->
