--- a/RentalCars/RentalCars/Pages/Shared/_MainMenu.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_MainMenu.cshtml
@@ -3,12 +3,8 @@
 		<!-- Add icons to the links using the .nav-icon class
 			 with font-awesome or any other icon font library -->
 		<li class="nav-item ">
-			<a href="/" class="nav-link active">
-				<i class="fas fa-home"></i>
-				<p>
-					Home
-				</p>
-			</a>
+			<a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+			<a class="nav-link active" asp-area="" asp-controller="Cars" asp-action="All">Cars</a>
 		</li>
 	</ul>
 </nav>
