dealers added + all function

--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 				<li class="nav-item">
 				    <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="All">Our Cars<i class="nav-link"></i></a>
 				</li>
+				<li class="nav-item">
+				    <a class="nav-link" asp-area="" asp-controller="Dealers" asp-action="Become">Become<i class="nav-link"></i></a>
+				</li>
 			</ul>
 
 			<!-- Right navbar links -->
