--- a/RentalCars/RentalCars/Pages/Shared/Add.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/Add.cshtml
@@ -1,5 +1,5 @@
 ﻿@using RentalCars.Models.Cars
-@model CarFormModel
+@model AddCarFormModel
 
 <!-- Google Font: Source Sans Pro -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
