using namespaces are added in the viewimports

--- a/RentalCars/RentalCars/Pages/Shared/Become.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/Become.cshtml
@@ -1,5 +1,4 @@
-﻿@using RentalCars.Models.Dealers
-@model BecomeDealerFormModel
+﻿@model BecomeDealerFormModel
 
 @{
     ViewBag.Title = "Become Dealer";
