--- a/RentalCars/RentalCars/Pages/_ViewImports.cshtml
+++ b/RentalCars/RentalCars/Pages/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using RentalCars
 @using RentalCars.Models.Cars
 @using RentalCars.Data
+@using RentalCars.Models.Dealers
 @namespace RentalCars.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
