--- a/RentalCars/RentalCars/Pages/_ViewImports.cshtml
+++ b/RentalCars/RentalCars/Pages/_ViewImports.cshtml
@@ -3,5 +3,9 @@
 @using RentalCars.Models.Cars
 @using RentalCars.Data
 @using RentalCars.Models.Dealers
+@using RentalCars.Services.Cars.Models
+@using RentalCars.Services.Cars
+@using RentalCars.Services.Dealers
+
 @namespace RentalCars.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
