now if you are not authorized you can also see our cars

--- a/RentalCars/RentalCars/Pages/Shared/_CarsPartial.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_CarsPartial.cshtml
@@ -2,6 +2,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 @inject IDealerService Dealers
+
 <div class="row">
 
 @if (SignInManager.IsSignedIn(User))
@@ -27,5 +28,19 @@
             </div>
         }
 
+    }
+    else
+    {
+          @foreach (var car in Model)
+        {
+            <div class="col-md-4">
+                <div class="card mb-3">
+                    <img class="card-img-top" src="@car.ImageUrl" alt="@car.Brand @car.Model - @car.Year (@car.CategoryName)">
+                    <div class="card-body text-center">
+                        <h5 class="card-title text-center">@car.Year  @car.Brand @car.Model (@car.CategoryName)</h5>   
+                    </div>
+                </div>
+            </div>
+        }  
     }
 </div>
