some things in the design were changed

--- a/RentalCars/RentalCars/Pages/Shared/All.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/All.cshtml
@@ -1,6 +1,7 @@
 ﻿@model AllCarsQueryModel
+
 @{
-    ViewData["Title"] = "All Cars";
+    ViewBag.Title = "All Cars";
 }
 
 <form method="get">
@@ -10,6 +11,7 @@
                 <label asp-for="Brand"></label>
                 <select asp-for="Brand" class="form-control">
                     <option value="">All</option>
+
                     @foreach (var brand in Model.Brands)
                     {
                         <option value="@brand">@brand</option>
@@ -17,10 +19,12 @@
                 </select>
             </div>
         </div>
+
         <div class="form-group col-md-4">
             <label asp-for="SearchTerm"></label>
             <input asp-for="SearchTerm" class="form-control" placeholder="BMW 640D, etc...">
         </div>
+
         <div class="form-group col-md-4">
             <div class="form-group">
                 <label asp-for="Sorting"></label>
@@ -33,22 +37,17 @@
         </div>
     </div>
 </form>
+
 @{
     var previousPage = Model.CurrentPage - 1;
     if (previousPage < 1)
     {
         previousPage = 1;
     }
+
     var maxPage = Math.Ceiling((double)Model.TotalCars / AllCarsQueryModel.CarsPerPage);
-
-    if (Model.TotalCars == 0)
-    {
-        maxPage = Model.CurrentPage;
-
-    }
-    
-   
 }
+
 <div class="row mb-5">
     <div class="col-md-6">
         <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
@@ -59,8 +58,14 @@
            asp-route-searchTerm="@Model.SearchTerm"
            asp-route-sorting="@((int)Model.Sorting)"><<</a>
     </div>
+
+    @{
+        var shouldButtonBeDisabled = Model.CurrentPage == maxPage ||
+        !Model.Cars.Any();
+    }
+
     <div class="col-md-6">
-        <a class="btn btn-primary float-right @(Model.CurrentPage == maxPage ? "disabled" : string.Empty)"
+        <a class="btn btn-primary float-sm-right @(shouldButtonBeDisabled ? "disabled" : string.Empty)" style="margin-top: 10px"
            asp-controller="Cars"
            asp-action="All"
            asp-route-currentPage="@(Model.CurrentPage + 1)"
@@ -68,11 +73,12 @@
            asp-route-searchTerm="@Model.SearchTerm"
            asp-route-sorting="@((int)Model.Sorting)">>></a>
     </div>
+    
 </div>
-    @if (!Model.Cars.Any())
-    {
-        <h4 class="text-center">There are no cars with that criteria!</h4>
-    }
+
+@if (!Model.Cars.Any())
+{
+    <h2 class="text-center">No cars found by the given criteria!</h2>
+}
 
 <partial name="_CarsPartial" model="@Model.Cars" />
-            
