--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using RentalCars.Models.Dealers
-
+@inject IDealerService Dealers
+@inject SignInManager<IdentityUser> SignInManager
 
 <!DOCTYPE html>
 <!--
@@ -30,23 +31,48 @@ scratch. This page gets rid of all links and provides the needed markup only.
 	<div class="wrapper">
 
 		<!-- Navbar -->
+			@if (SignInManager.IsSignedIn(User))
+			{
+				var userId = User.GetId();
+				var userIsDealer = Dealers.IsDealer(userId);
+
+
+				if (userIsDealer)
+				{
+					
+				}
+			}
 		<nav class="main-header navbar navbar-expand navbar-white navbar-light">
 			<!-- Left navbar links -->
-			<ul class="navbar-nav">
-				<li class="nav-item">
+			@if (SignInManager.IsSignedIn(User))
+			{
+				var userId = User.GetId();
+				var userIsDealer = Dealers.IsDealer(userId);
+
+
+			
+
+				<ul class="navbar-nav">
+					<li class="nav-item">
 					<a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
 				</li>
 				<li class="nav-item">
 					<a href="/" class="nav-link">Home</a>					
 				</li>
+				@if (userIsDealer)
+					{
+					<li class="nav-item">
+						 <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="Add">Add Car<i class="nav-link"></i></a>
+					</li>
+					<li class="nav-item">
+						 <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="Mine">Mine<i class="nav-link"></i></a>
+					</li>	
+					}
 				<li class="nav-item">
-				    <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="Add">Add Car<i class="nav-link"></i></a>
-				</li>
-				<li class="nav-item">
-				    <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="All">Our Cars<i class="nav-link"></i></a>
+				    <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="All">Avaible Cars<i class="nav-link"></i></a>
 				</li>	
 			</ul>
-
+			}
 			<!-- Right navbar links -->
 			<ul class="navbar-nav ml-auto">
 				<!-- Navbar Search -->
