--- a/RentalCars/RentalCars/Pages/Shared/_LoginPartial.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_LoginPartial.cshtml
@@ -10,13 +10,7 @@
         var userId = User.GetId();
         var userIsDealer = Dealers.IsDealer(userId);
 
-        @if (userIsDealer)
-        {
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Mine">My Cars</a>
-            </li>
-        }
-        else
+        @if (userIsDealer == false)
         {
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Dealers" asp-action="Become">Become Dealer</a>
