automapper added and is used in all of the controllers

--- a/RentalCars/RentalCars/Pages/_ViewImports.cshtml
+++ b/RentalCars/RentalCars/Pages/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using RentalCars
 @using RentalCars.Core.Models.Cars
 @using RentalCars.Data
+@using RentalCars.Core.Extensions
 @using RentalCars.Core.Models.Dealers
 @using RentalCars.Core.Services.Cars.Models
 @using RentalCars.Core.Services.Cars
