--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using RentalCars.Core.Models.Dealers
+﻿@using RentalCars.Core.Extensions
+@using RentalCars.Core.Models.Dealers
 @inject IDealerService Dealers
 @inject SignInManager<IdentityUser> SignInManager
 
@@ -155,7 +156,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 			</div>
 			<!-- /.content-header -->
 			<!-- Main content -->
-			<div class="content">
+			<div class="content ml-6">
 				<div class="container-fluid">
 					@RenderBody()
 
