--- a/RentalCars/RentalCars/Pages/Shared/_LoginPartial.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using RentalCars.Core.Extensions
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 @inject IDealerService Dealers
