--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -39,11 +39,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
 				var userId = User.GetId();
 				var userIsDealer = Dealers.IsDealer(userId);
 
-
-				if (userIsDealer)
-				{
-					
-				}
 			}
 		<nav class="main-header navbar navbar-expand navbar-white navbar-light">
 			<!-- Left navbar links -->
@@ -51,9 +46,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
 			{
 				var userId = User.GetId();
 				var userIsDealer = Dealers.IsDealer(userId);
-
-
-			
 
 				<ul class="navbar-nav">
 					<li class="nav-item">
@@ -70,6 +62,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
 					<li class="nav-item">
 						 <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="Mine">Mine<i class="nav-link"></i></a>
 					</li>	
+					}
+			    @if (User.IsAdmin())
+					{
+						<li class="nav-item">
+						 <a class="nav-link" asp-area="Admin" asp-controller="Cars" asp-action="All">Administration<i class="nav-link"></i></a>
+						</li>
 					}
 				<li class="nav-item">
 				    <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="All">Avaible Cars<i class="nav-link"></i></a>
