--- a/RentalCars/RentalCars/Areas/Admin/Views/Cars/All.cshtml
+++ b/RentalCars/RentalCars/Areas/Admin/Views/Cars/All.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CarServiceModel>
 
 @{
-    ViewBag.Title = "something";
+    ViewBag.Title = "Admin all cars";
 }
 
 @{
@@ -16,6 +16,7 @@
             <th scope="col">Id</th>
             <th scope="col">Brand</th>
             <th scope="col">Model</th>
+            <th scope="col">Price</th>
             <th scope="col">Year</th>
             <th scope="col">Category</th>
             <th scope="col">Approved</th>
@@ -29,6 +30,7 @@
             <td scope="col">@car.Id</td>
             <td scope="col">@car.Brand</td>
             <td scope="col">@car.Model</td>
+            <td scope="col">@car.Price</td>
             <td scope="col">@car.Year</td>
             <td scope="col">@car.CategoryName</td>
             <td scope="col">@(car.IsPublic ? "Yes" : "No")</td>
@@ -37,6 +39,7 @@
                 <a asp-area="" asp-controller="Cars" asp-action="Edit" asp-route-id="@car.Id" class="btn btn-warning float-right ml-3">Edit</a>
                 <a asp-area="Admin" asp-controller="Cars" asp-action="ChangeVisibility" asp-route-id="@car.Id" class="btn btn-info float-right ml-3">@(car.IsPublic ? "Hide" : "Show")</a>
                 <a asp-area="" asp-controller="Cars" asp-action="Details" asp-route-id="@car.Id" asp-route-information="@car.GetInformationUrl()" class="btn btn-primary float-right ml-3">View</a>
+
             </td>
         </tr>
         }
