--- a/RentalCars/RentalCars/Pages/Cars/_CarFormPartial.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/_CarFormPartial.cshtml
@@ -21,6 +21,11 @@
                 <span asp-validation-for="Description" class="small text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Price"></label>
+                <input asp-for="Price" class="form-control" placeholder="Set your price for one day...">
+                <span asp-validation-for="Price" class="small text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ImageUrl"></label>
                 <input asp-for="ImageUrl" class="form-control" placeholder="Your fine URL here...">
                 <span asp-validation-for="ImageUrl" class="small text-danger"></span>
