--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -66,7 +66,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
 			    @if (User.IsAdmin())
 					{
 						<li class="nav-item">
-						 <a class="nav-link" asp-area="Admin" asp-controller="Cars" asp-action="All">Administration<i class="nav-link"></i></a>
+						 <a class="nav-link" asp-area="Admin" asp-controller="Cars" asp-action="All">Approvals<i class="nav-link"></i></a>
+						</li>
+						<li class="nav-item">
+						 <a class="nav-link" asp-area="Admin" asp-controller="Bookings" asp-action="Book">Bookings<i class="nav-link"></i></a>
 						</li>
 					}
 				<li class="nav-item">
