--- a/RentalCars/RentalCars/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/lib/jquery-validation/dist/jqueryDecimal.js"></script>
 <script src="~/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/bootstrap/js/dist/base-component.js"></script>
