create bookform model, booking view, add some func in the controller
it is not ready already( view is not working with carspartial view)

--- a/RentalCars/RentalCars/Pages/_ViewImports.cshtml
+++ b/RentalCars/RentalCars/Pages/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using RentalCars.Core.Models.Cars
 @using RentalCars.Data
 @using RentalCars.Core.Extensions
+@using RentalCars.Core.Models
 @using RentalCars.Core.Models.Dealers
 @using RentalCars.Core.Services.Cars.Models
 @using RentalCars.Core.Services.Cars
