--- a/RentalCars/RentalCars/Pages/Cars/Details.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/Details.cshtml
@@ -18,7 +18,7 @@
 
 <div>
 	<div>
-		<a asp-controller="Cars" asp-action="Renting" asp-route-id="@Model.Id" class="btn btn-primary ml-5 md-5">Rent it</a>
+		<a asp-controller="Bookings" asp-action="Booking" asp-route-id="@Model.Id" class="btn btn-primary ml-5 md-5">Rent it</a>
 	</div>
 </div>
 
