--- a/RentalCars/RentalCars/Pages/Bookings/Booking.cshtml
+++ b/RentalCars/RentalCars/Pages/Bookings/Booking.cshtml
@@ -1,25 +1,32 @@
 ﻿@using RentalCars.Core.Models.Bookings
-
 @model BookingFormModel
+
+
+@{
+	ViewBag.Title = "Renting the car";
+}
+
 <!DOCTYPE html>
-
-
-<partial name="_CarFormPartial" model="@Model" />
-
 <html>
 <body>
+	<h1>When you want the car?</h1>
 
-	<h1>When you want the car</h1>
+	<div class="col-md-5">
+		<img class="card-img-top" src="@Model.ImageUrl" alt="@Model.Brand @Model.Model - @Model.Year">
+	</div>
 
 	<form action="/action_page.php">
 		<label asp-for="BookingDate"></label>
-		<input asp-for="BookingDate" type="date">
+		<input asp-for="BookingDate" type="date" value="2022-10-30">
 	</form>
 	<form action="/action_page.php">
 		<label asp-for="ReturnDate"></label>
-		<input asp-for="ReturnDate" type="date">
+		<input asp-for="ReturnDate" type="date" value="2022-10-30">
+	</form>
+	<form>
+		<h5 class="card-title text-center">@Model.Price$ Price for one day.</h5>
+		<input class="btn btn-primary mt-3" type="submit" method="Post "value="Save" />
 	</form>
 
-	<input class="btn btn-primary mt-3" type="submit" value="Save" />
 </body>
 </html>
