--- a/RentalCars/RentalCars/Areas/Admin/Views/Cars/All.cshtml
+++ b/RentalCars/RentalCars/Areas/Admin/Views/Cars/All.cshtml
@@ -20,6 +20,7 @@
             <th scope="col">Year</th>
             <th scope="col">Category</th>
             <th scope="col">Approved</th>
+            <th scope="col">Booked</th>
             <th scope="col"></th>
         </tr>
     </thead>
@@ -34,6 +35,7 @@
             <td scope="col">@car.Year</td>
             <td scope="col">@car.CategoryName</td>
             <td scope="col">@(car.IsPublic ? "Yes" : "No")</td>
+            <td scope="col">@(car.IsBooked ? "Yes" : "No")</td>
             <td scope="col">
                 <a asp-area="" asp-controller="Cars" asp-action="Delete" asp-route-id="@car.Id" class="btn btn-danger float-right ml-3">Delete</a>
                 <a asp-area="" asp-controller="Cars" asp-action="Edit" asp-route-id="@car.Id" class="btn btn-warning float-right ml-3">Edit</a>
