--- a/RentalCars/RentalCars/Areas/Admin/Views/Booking/Rent.cshtml
+++ b/RentalCars/RentalCars/Areas/Admin/Views/Booking/Rent.cshtml
@@ -3,49 +3,49 @@
 @model IEnumerable<AdminBookingModel>
 
 @{
-    ViewBag.Title = "Admin all cars";
+	ViewBag.Title = "Admin all cars";
 }
 
 @{
-    Layout = "~/Pages/Shared/_layout.cshtml";
+	Layout = "~/Pages/Shared/_layout.cshtml";
 }
 
 <h1>All Cars</h1>
 
 <table class="table table-striped">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">User Name</th>
-            <th scope="col">User Last Name</th>
-            <th scope="col">User Id</th>
-            <th scope="col">Booking Date</th>
-            <th scope="col">Return Date</th>
-            <th scope="col">Car Id</th>
-            <th scope="col">Dealer Id</th>
-            <th scope="col">Approved</th>
-            <th scope="col"></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var booking in Model)
-        {
-            <tr>
-                <td scope="col">@booking.Id</td>
-                <td scope="col">@booking.CustomerFirstName</td>
-                <td scope="col">@booking.CustomerLastName</td>
-                <td scope="col">@booking.CustomerId</td>
-                <td scope="col">@booking.BookingDate</td>
-                <td scope="col">@booking.ReturnDate</td>
-                <td scope="col">@booking.CarId</td>
-                <td scope="col">@booking.DealerId</td>
-                <td scope="col">@(booking.Status? "Yes" : "No")</td>
-                <td scope="col">
-                    <a  asp-area="Admin" asp-controller="Booking" asp-action="Delete" asp-route-id="@booking.Id" class="btn btn-danger float-right ml-3">Delete</a>
-                    <a asp-area="Admin" asp-controller="Booking" asp-action="ChangeVisibility" asp-route-id="@booking.Id @booking.CarId" class="btn btn-info float-right ml-3">@(booking.Status ? "Show" : "Hide")</a>
+	<thead class="thead-dark">
+		<tr>
+			<th scope="col">Id</th>
+			<th scope="col">User Name</th>
+			<th scope="col">User Last Name</th>
+			<th scope="col">User Id</th>
+			<th scope="col">Booking Date</th>
+			<th scope="col">Return Date</th>
+			<th scope="col">Car Id</th>
+			<th scope="col">Dealer Id</th>
+			<th scope="col">Approved</th>
+			<th scope="col"></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var booking in Model)
+		{
+			<tr>
+				<td scope="col">@booking.Id</td>
+				<td scope="col">@booking.CustomerFirstName</td>
+				<td scope="col">@booking.CustomerLastName</td>
+				<td scope="col">@booking.CustomerId</td>
+				<td scope="col">@booking.BookingDate</td>
+				<td scope="col">@booking.ReturnDate</td>
+				<td scope="col">@booking.CarId</td>
+				<td scope="col">@booking.DealerId</td>
+				<td scope="col">@(booking.Status ? "Yes" : "No")</td>
+				<td scope="col">
+					<a asp-area="Admin" asp-controller="Booking" asp-action="Delete" asp-route-id="@booking.Id" asp-route-id="@booking.CarId" class="btn btn-danger float-right ml-3">Delete</a>
+					<a asp-area="Admin" asp-controller="Booking" asp-action="ChangeVisibility" asp-route-id="@booking.Id" class="btn btn-info float-right ml-3">@(booking.Status ? "Hide" : "Show")</a>
 
-                </td>
-            </tr>
-        }
-    </tbody>
+				</td>
+			</tr>
+		}
+	</tbody>
 </table>
