booking now have price for the car but I should change the model of dateTime in the viewModel
bookingDate and returningDate

--- a/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
+++ b/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
@@ -32,8 +32,7 @@
                 <select asp-for="CarId" class="form-control">
                     @foreach (var car in Model.Cars)
                     {
-                        <option value="@car.Id">@car.Brand @car.Model (@car.Year)</option>
-                        
+                        <option value="@car.Id">@car.Brand @car.Model (Price:@car.Price)(Year of the car @car.Year)</option>                        
                     }
                 </select>
                 <span asp-validation-for="CarId" class="small text-danger"></span>
