--- a/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
+++ b/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
@@ -18,12 +18,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="BookingDate"></label>
-                <input asp-for="BookingDate" class="form-control" placeholder="dd-mm-yyyy">
+                <input asp-for="BookingDate" class="form-control" placeholder="mm-dd-yyyy">
                 <span asp-validation-for="BookingDate" class="date"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ReturningDate"></label>
-                <input asp-for="ReturningDate" class="form-control" placeholder="dd-mm-yyyy">
+                <input asp-for="ReturningDate" class="form-control" placeholder="mm-dd-yyyy">
                 <span asp-validation-for="ReturningDate" class="date"></span>
             </div>
             
