--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 	<!-- Toastr-->
 	<link rel="stylesheet" href="~/plugins/toastr/toastr.min.css" />
 	<!-- Favicon-->
-	 <link rel="icon" type="image/x-icon" href="~/warehouse3.png">
+	 <link rel="icon" type="image/x-icon" href="~/img/CarRent.png">
 	 
 	@await RenderSectionAsync("Head",false)
 </head>
@@ -75,6 +75,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 					}
 				<li class="nav-item">
 				    <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="All">Avaible Cars<i class="nav-link"></i></a>
+				</li>	
+				<li class="nav-item">
+				    <a class="nav-link" asp-area="" asp-controller="Booking" asp-action="Rent">Rent Car<i class="nav-link"></i></a>
 				</li>	
 			</ul>
 			}
