price was set in the renting

--- a/RentalCars/RentalCars/Areas/Admin/Views/Booking/Rent.cshtml
+++ b/RentalCars/RentalCars/Areas/Admin/Views/Booking/Rent.cshtml
@@ -22,6 +22,7 @@
 			<th scope="col">Booking Date</th>
 			<th scope="col">Return Date</th>
 			<th scope="col">Car Id</th>
+			<th scope="col">Price</th>
 			<th scope="col">Dealer Id</th>
 			<th scope="col">Approved</th>
 			<th scope="col"></th>
@@ -38,6 +39,7 @@
 				<td scope="col">@booking.BookingDate</td>
 				<td scope="col">@booking.ReturnDate</td>
 				<td scope="col">@booking.CarId</td>
+				<td scope="col">@booking.Price</td>
 				<td scope="col">@booking.DealerId</td>
 				<td scope="col">@(booking.Status ? "Yes" : "No")</td>
 				<td scope="col">
