now dealers can approve the booking process

--- a/RentalCars/RentalCars/Areas/Admin/Views/Booking/Rent.cshtml
+++ b/RentalCars/RentalCars/Areas/Admin/Views/Booking/Rent.cshtml
@@ -24,7 +24,8 @@
 			<th scope="col">Car Id</th>
 			<th scope="col">Price</th>
 			<th scope="col">Dealer Id</th>
-			<th scope="col">Approved</th>
+			<th scope="col">Approved by Dealer</th>
+			<th scope="col">Approved by Admin</th>
 			<th scope="col"></th>
 		</tr>
 	</thead>
@@ -41,10 +42,11 @@
 				<td scope="col">@booking.CarId</td>
 				<td scope="col">@booking.Price</td>
 				<td scope="col">@booking.DealerId</td>
-				<td scope="col">@(booking.Status ? "Yes" : "No")</td>
+				<td scope="col">@(booking.IsConfirmedByAdmin ? "Yes" : "No")</td>
+				<td scope="col">@(booking.IsConfirmedByDealer ? "Yes" : "No")</td>
 				<td scope="col">
 					<a asp-area="Admin" asp-controller="Booking" asp-action="Delete" asp-route-id="@booking.Id" asp-route-id="@booking.CarId" class="btn btn-danger float-right ml-3">Delete</a>
-					<a asp-area="Admin" asp-controller="Booking" asp-action="ChangeVisibility" asp-route-id="@booking.Id" class="btn btn-info float-right ml-3">@(booking.Status ? "Hide" : "Show")</a>
+					<a asp-area="Admin" asp-controller="Booking" asp-action="ChangeVisibility" asp-route-id="@booking.Id" class="btn btn-info float-right ml-3">@(booking.IsConfirmedByAdmin ? "Hide" : "Accept")</a>
 
 				</td>
 			</tr>
