--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -62,6 +62,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 					<li class="nav-item">
 						 <a class="nav-link" asp-area="" asp-controller="Cars" asp-action="Mine">Mine<i class="nav-link"></i></a>
 					</li>	
+					<li class="nav-item">
+						 <a class="nav-link" asp-area="" asp-controller="Dealers" asp-action="Rent">Renting Approval<i class="nav-link"></i></a>
+					</li>
 					}
 			    @if (User.IsAdmin())
 					{
