resolved the problem with the title of views and add one more admin

--- a/RentalCars/RentalCars/Areas/Admin/Views/Cars/All.cshtml
+++ b/RentalCars/RentalCars/Areas/Admin/Views/Cars/All.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CarServiceModel>
 
 @{
-    ViewBag.Title = "Admin all cars";
+    ViewData["Title"] = "Admin all cars";
 }
 
 @{
