--- a/RentalCars/RentalCars/Pages/Cars/All.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/All.cshtml
@@ -1,8 +1,9 @@
 ﻿@model AllCarsQueryModel
 
-@{
-    ViewBag.Title = "All Cars";
-}
+    @{
+        ViewData["Title"] = "Avaible cars";
+
+    }
 
 <form method="get">
     <div class="row">
