--- a/RentalCars/RentalCars/Pages/Cars/Details.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/Details.cshtml
@@ -1,8 +1,7 @@
 ﻿@model CarDetailsServiceModel
 
 @{
-	ViewBag.Title = "Detais of the car";
-	ViewBag.AllowCarEdit = true;
+ViewData["Title"] = "Details of the cars";
 }
 
 	<div class="col-md-6">
