--- a/RentalCars/RentalCars/Pages/Dealers/Become.cshtml
+++ b/RentalCars/RentalCars/Pages/Dealers/Become.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BecomeDealerFormModel
 
 @{
-    ViewBag.Title = "Become Dealer";
+    ViewData["Title"] = "Become a dealer";
 }
 
 <div class="row">
