--- a/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
+++ b/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
@@ -1,5 +1,8 @@
 ﻿@using RentalCars.Core.Models.Renting
 @model RentFormModel
+@{
+ViewData["Title"] = "Renting cars";
+}
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
