--- a/RentalCars/RentalCars/Pages/Cars/Add.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarFormModel
 
 @{
-    ViewData["Title"] = "Add Car";
+ViewData["Title"] = "Adding cars";
 }
 
     <partial name="_CarFormPartial" model="@Model" />
