--- a/RentalCars/RentalCars/Pages/Cars/Edit.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarFormModel
 
 @{
-    ViewBag.Title = "Edit Car";
+	ViewData["Title"] = "Editing cars";
 }
 
 <partial name="_CarFormPartial" model="@Model" />
