--- a/RentalCars/RentalCars/Pages/Cars/Mine.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/Mine.cshtml
@@ -1,8 +1,7 @@
 ﻿@model IEnumerable<CarServiceModel>
 
 @{
-    ViewBag.Title = "My Cars";
-    ViewBag.AllowCarEdit = true;
+ViewData["Title"] = "My cars";
 }
 
 @if (!Model.Any())
