car photos could be saved only as file
some of the methos are now working

--- a/RentalCars/RentalCars/Pages/Shared/Index.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Welcome!";
     var cars = Model.ToList();
 }
-@if (!Model.Any())
+@if (Model.Any() == false)
 {
     <div class="jumbotron">
         <h1 class="display-4">Welcome to the best place for renting cars!</h1>
