--- a/RentalCars/RentalCars/Pages/Cars/_CarFormPartial.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/_CarFormPartial.cshtml
@@ -4,7 +4,7 @@
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
         <h2 class="heading-margin text-center">@ViewBag.Title</h2>
 
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label asp-for="Brand"></label>
                 <input asp-for="Brand" class="form-control" placeholder="BMW, Mercedes, etc...">
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImageUrl"></label>
-                <input asp-for="ImageUrl" class="form-control" placeholder="Your fine URL here...">
+                <input type="file" id="files" asp-for="ImageUrl"/>
                 <span asp-validation-for="ImageUrl" class="small text-danger"></span>
             </div>
             <div class="form-group">
