--- a/RentalCars/RentalCars/Pages/Cars/_CarsPartial.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/_CarsPartial.cshtml
@@ -12,9 +12,13 @@
 
         @foreach (var car in Model)
         {
+            var base64 = Convert.ToBase64String(car.ImageUrl);
+            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+
+
             <div class="col-md-4">
                 <div class="card mb-3">
-                    <img class="card-img-top" src="@car.ImageUrl" alt="@car.Brand @car.Model - @car.Year (@car.CategoryName)">
+                   <img src="@imgSrc" alt="@car.Brand @car.Model - @car.Year (@car.CategoryName)">
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">@car.Year  @car.Brand @car.Model (@car.CategoryName)</h5>
                         <a asp-controller="Cars" asp-action="Details" asp-route-id="@car.Id" asp-route-information="@car.GetInformationUrl()" class="btn btn-primary">View</a>
