--- a/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
+++ b/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
@@ -35,7 +35,7 @@ ViewData["Title"] = "Renting cars";
                 <select asp-for="CarId" class="form-control">
                     @foreach (var car in Model.Cars)
                     {
-                        <option value="@car.Id">@car.Brand @car.Model (Price:@car.Price)(Year of the car @car.Year)</option>                        
+                        <option value="@car.Id">@car.Brand @car.Model (Daily price:@car.Price)(Year of the car @car.Year)</option>                        
                     }
                 </select>
                 <span asp-validation-for="CarId" class="small text-danger"></span>
