--- a/RentalCars/RentalCars/Pages/Shared/Index.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/Index.cshtml
@@ -1,43 +1,49 @@
 ﻿@model IEnumerable<CarIndexModel>
 @{
-    ViewBag.Title = "Welcome!";
-    var cars = Model.ToList();
+	ViewBag.Title = "Welcome!";
+	var cars = Model.ToList();
+
 }
 @if (Model.Any() == false)
 {
-    <div class="jumbotron">
-        <h1 class="display-4">Welcome to the best place for renting cars!</h1>
-        <p class="lead">There are no cars in the system currently available so why don't you just add one?</p>
-        <hr class="my-4">
-        <p class="lead">
-            <a asp-controller="Cars" asp-action="Add" class="btn btn-primary btn-lg" role="button">Add Car</a>
-        </p>
-    </div>
+	<div class="jumbotron">
+		<h1 class="display-4">Welcome to the best place for renting cars!</h1>
+		<p class="lead">There are no cars in the system currently available so why don't you just add one?</p>
+		<hr class="my-4">
+		<p class="lead">
+			<a asp-controller="Cars" asp-action="Add" class="btn btn-primary btn-lg" role="button">Add Car</a>
+		</p>
+	</div>
 }
 
 <div class="mb-5"></div>
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-        @for (int i = 0; i < cars.Count; i++)
-        {
-            var car = cars[i];
-            <div class="carousel-item @(i == 0 ? "active" : string.Empty)">
-                <img class="d-block w-100 p-3" src="@car.ImageUrl" alt="@car.Brand ">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" asp-controller="Cars" asp-action="Details" asp-route-id="@car.Id">@car.Brand</a></h5>
-                </div>
-            </div>
-        }
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+	<div class="carousel-inner">
+		@for (int i = 0; i < cars.Count; i++)
+		{
+
+			var car = cars[i];
+
+			var base64 = Convert.ToBase64String(car.ImageUrl);
+			var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+
+			<div class="carousel-item @(i == 0 ? "active" : string.Empty)">
+				<img class="d-block w-100 p-3" src="@imgSrc" alt="@car.Brand ">
+				<div class="carousel-caption d-none d-md-block">
+					<h5><a class="btn btn-primary" asp-controller="Cars" asp-action="Details" asp-route-id="@car.Id">@car.Brand</a></h5>
+				</div>
+			</div>
+		}
+	</div>
+	<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	</a>
+	<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	</a>
 </div>
 
 <div class="mb-5"></div>
