--- a/RentalCars/RentalCars/Pages/Cars/_CarFormPartial.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/_CarFormPartial.cshtml
@@ -26,9 +26,9 @@
                 <span asp-validation-for="Price" class="small text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageUrl"></label>
-                <input type="file" id="files" asp-for="ImageUrl"/>
-                <span asp-validation-for="ImageUrl" class="small text-danger"></span>
+                <label asp-for="CarPhoto"></label>
+                <input type="file" id="files" asp-for="CarPhoto"/>
+                <span asp-validation-for="CarPhoto" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Year"></label>
