--- a/RentalCars/RentalCars/Pages/Cars/_CarsPartial.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/_CarsPartial.cshtml
@@ -12,7 +12,7 @@
 
         @foreach (var car in Model)
         {
-            var base64 = Convert.ToBase64String(car.ImageUrl);
+            var base64 = Convert.ToBase64String(car.CarPhoto);
             var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
 
 
@@ -40,7 +40,7 @@
         {
             <div class="col-md-4">
                 <div class="card mb-3">
-                    <img class="card-img-top" src="@car.ImageUrl" alt="@car.Brand @car.Model - @car.Year (@car.CategoryName)">
+                    <img class="card-img-top" src="@car.CarPhoto" alt="@car.Brand @car.Model - @car.Year (@car.CategoryName)">
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">@car.Year  @car.Brand @car.Model (@car.CategoryName)</h5>   
                     </div>
