--- a/RentalCars/RentalCars/Pages/Shared/Index.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/Index.cshtml
@@ -25,7 +25,7 @@
 
 			var car = cars[i];
 
-			var base64 = Convert.ToBase64String(car.ImageUrl);
+			var base64 = Convert.ToBase64String(car.CarPhoto);
 			var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
 
 			<div class="carousel-item @(i == 0 ? "active" : string.Empty)">
