--- a/RentalCars/RentalCars/Pages/Shared/_MainMenu.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_MainMenu.cshtml
@@ -18,7 +18,7 @@
 				{
 					<a class="nav-link active" asp-area="Admin" asp-controller="Booking" asp-action="Rent">Accept Bookings</a>
 					<a class="nav-link active" asp-area="Admin" asp-controller="Cars" asp-action="All">Accept Cars</a>
-					<a class="nav-link" asp-area="Admin" asp-controller="Booking" asp-action="GetOfferts">Approved bookings<i class="nav-link"></i></a>
+					<a class="nav-link active" asp-area="Admin" asp-controller="Booking" asp-action="GetOfferts">Approved bookings</a>
 				}
 				if (User.IsAdmin() == false)
 				{
