--- a/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
+++ b/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
@@ -21,12 +21,12 @@ ViewData["Title"] = "Renting cars";
             </div>
             <div class="form-group">
                 <label asp-for="BookingDate"></label>
-                <input asp-for="BookingDate" class="form-control" value="@DateTime.UtcNow.Date">
+                <input asp-for="BookingDate" type="datetime-local" value="@DateTime.UtcNow.Date">
                 <span asp-validation-for="BookingDate" class="date"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ReturningDate"></label>
-                <input asp-for="ReturningDate" class="form-control" value="@DateTime.UtcNow.Date">
+                <input asp-for="ReturningDate" type="datetime-local" value="@DateTime.UtcNow.Date">
                 <span asp-validation-for="ReturningDate" class="date"></span>
             </div>
             
