--- a/RentalCars/RentalCars/Pages/Cars/Details.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CarDetailsServiceModel
 
 @{
-    ViewBag.Title = "House Details";
+    ViewData["Title"] = "House Details";
 }
 
-<h2 class="text-center">@ViewBag.Title</h2>
+<h2 class="text-center">House Details</h2>
 <hr />
 @{
     var userId = User.GetId();
