validation if the car return date is expired added

--- a/RentalCars/RentalCars/Pages/Dealers/Rent.cshtml
+++ b/RentalCars/RentalCars/Pages/Dealers/Rent.cshtml
@@ -3,14 +3,14 @@
 @model IEnumerable<AdminBookingModel>
 
 @{
-	 ViewData["Title"]="Offerts";
+	ViewData["Title"] = "Offerts";
 }
 
 @{
 	Layout = "~/Pages/Shared/_layout.cshtml";
 }
 
-<h1>All Cars</h1>
+<h1>Offerts</h1>
 
 <table class="table table-striped">
 	<thead class="thead-dark">
@@ -46,10 +46,14 @@
 				<td scope="col">@(booking.IsConfirmedByDealer ? "Yes" : "No")</td>
 				<td scope="col">
 					<a asp-area="Admin" asp-controller="Booking" asp-action="Delete" asp-route-id="@booking.Id" asp-route-id="@booking.CarId" class="btn btn-danger float-right ml-3">Delete</a>
-					<a asp-area="" asp-controller="Dealers" asp-action="ChangeVisibility" asp-route-id="@booking.Id"  class="btn btn-info float-right ml-3">@(booking.IsConfirmedByAdmin ? "Hide" : "Accept")</a>
+					<a asp-area="" asp-controller="Dealers" asp-action="ChangeVisibility" asp-route-id="@booking.Id" class="btn btn-info float-right ml-3">@(booking.IsConfirmedByAdmin ? "Hide" : "Accept")</a>
 
 				</td>
 			</tr>
 		}
 	</tbody>
 </table>
+		@if (Model.Any() == false)
+		{
+			<h2 class="text-center">There are no rental offers!</h2>
+		}
