--- a/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
+++ b/RentalCars/RentalCars/Pages/Booking/Rent.cshtml
@@ -33,10 +33,14 @@ ViewData["Title"] = "Renting cars";
             <div class="form-group">
                 <label asp-for="CarId"></label>
                 <select asp-for="CarId" class="form-control">
-                    @foreach (var car in Model.Cars)
+                    @if (Model.Cars.Where(c => c.IsPublic == true && c.IsBooked == false) == null)
+                    {
+                            <h2 class="text-center">There are offerts for renting!</h2>   
+                    }
+                    @foreach (var car in Model.Cars.Where(c=>c.IsPublic == true && c.IsBooked == false))
                     {
                         <option value="@car.Id">@car.Brand @car.Model (Daily price:@car.Price)(Year of the car @car.Year)</option>                        
-                    }
+                    }                   
                 </select>
                 <span asp-validation-for="CarId" class="small text-danger"></span>
             </div>
