now renter could see the info of his renting

--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -68,6 +68,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 						<li class="nav-item">
 						 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Pay">Pay<i class="nav-link"></i></a>
 						</li>
+						<li class="nav-item">
+						 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="GetYouPaymentInfo">Payment info<i class="nav-link"></i></a>
+						</li>
 					}
 					@if (User.IsAdmin() == false)
 					{
@@ -95,33 +98,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 				}
 			<!-- Right navbar links -->
 			<ul class="navbar-nav ml-auto">
-				<!-- Navbar Search -->
-				@*<li class="nav-item">
-					<a class="nav-link" data-widget="navbar-search" href="#" role="button">
-						<i class="fas fa-search"></i>
-					</a>
-					<div class="navbar-search-block">
-						<form class="form-inline">
-							<div class="input-group input-group-sm">
-								<input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-								<div class="input-group-append">
-									<button class="btn btn-navbar" type="submit">
-										<i class="fas fa-search"></i>
-									</button>
-									<button class="btn btn-navbar" type="button" data-widget="navbar-search">
-										<i class="fas fa-times"></i>
-									</button>
-
-								</div>
-							</div>
-						</form>
-					</div>
-				</li>*@
-
-
 				<!-- Notifications Dropdown Menu -->
-
-
 				<li class="nav-item">
 					<a class="nav-link" data-widget="fullscreen" href="#" role="button">
 						<i class="fas fa-expand-arrows-alt"></i>
@@ -129,7 +106,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
 				</li>
 			</ul>
 			                    <partial name="_LoginPartial" />
-
 		</nav>
 		<!-- /.navbar -->
 		<!-- Main Sidebar Container -->
@@ -141,15 +117,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
 			</a>
 			<!-- Sidebar -->
 			<div class="sidebar">
-			@*<div class="sidebar">*@
-					@*<partial name="_LoginPartial" />*@
-
-				<!-- Sidebar user panel (optional) -->
-			
-
-				<!-- SidebarSearch Form -->
-				
-				<!-- Sidebar Menu -->
 				<partial name="_MainMenu"/> 
 				<!-- /.sidebar-menu -->
 			</div>
